traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.staging.example.org`)
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: production
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: example-org-tls
